# common

./: .gitignore  .gitmodules  common.props  common.sln  libs.props
common/: CMakeLists.txt  Makefile  common.vcxproj  common.vcxproj.filters
common/nbproject/: Makefile-Debug.mk  Makefile-Debug_laptop.mk  Makefile-Debug_praca.mk  Makefile-Debug_tv.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_laptop.bash  Package-Debug_praca.bash  Package-Debug_tv.bash  Package-Release.bash  configurations.xml  project.xml
common/src/: app.cpp  app.h  client_binary_session.cpp  client_binary_session.h  config.cpp  discovery.cpp  discovery.h  ios_wrapper.cpp  ios_wrapper.h  logger.cpp  logger.h  logger_init.cpp  mcs.cpp  server_binary_session.cpp  server_binary_session.h  service.cpp  service.h  timer.h  yamicontainer.cpp  yamicontainer.h
wshandling/: handler.cpp  handler.h  handler_t.h  handlers.cpp  handlers.h  wshandling.vcxproj  wshandling.vcxproj.filters
wshandling/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
yami4/include/yami4-core/: agent.h  channel_descriptor.h  core.h  parameter_entry.h  raw_buffer_data_source.h  serializable.h
yami4/include/yami4-cpp/: activity_statistics_monitor.h  agent_impl_base.h  connection_event_dispatcher_base.h  errors.h  event_callback.h  incoming_message.h  incoming_message_dispatcher_base.h  io_error_dispatcher_base.h  outgoing_message.h  parameter_entry.h  version.h  (+6 more)
(+614 files in other folders)
